# land-use-optimizer

./: .env.example  .gitignore  .zenodo.json  CONTRIBUTING.md  FINAL_SUBMISSION.tex  HOW_TO_RUN.md  LICENSE  MAINTENANCE.md  MANUSCRIPT_CHANGES.tex  MANUSCRIPT_UPDATES.md  PERFORMANCE_REPORT.md  README.md  SUBMISSION_README.md  architecture.html  ceus_report.md  compile_paper.sh  dashboard_app.py  dashboard_app.py.backup  demo.py  demo_complete_pipeline.py  demo_small_scale.py  download_manhattan_data.py  download_manhattan_data_simple.py  index.html  pyproject.toml  reproduce_all.sh  requirements-dev.txt  requirements.txt  run_full_manhattan.py  setup.py  verify_edges.py
.github/workflows/: ci.yml
Sources/Journal/: CEUS.docx
Sources/papers/: 2023_IJTP-153687_sup51275.docx
dashboard/: .env.local.example  README.md  next.config.js  package.json  tailwind.config.js
dashboard/src/app/: globals.css  (+2 more)
data/: zoning_rag_benchmark.json
docs/: mkdocs.yml  physics_validation.md  references.bib
docs/docs/: index.md
examples/: manhattan_demo.ipynb
experiments/: ablation_edge_types.py  ablation_physics_weight.py  run_baseline_comparisons.py  run_marl_validation.py  run_pareto_frontier.py
manuscript tex/: methods_section.tex  paper.tex
notebooks/: 01_training_visualization.ipynb  02_pareto_optimization.ipynb  README.md
pimaluos/: __init__.py  system.py
pimaluos/api/: __init__.py  server.py
pimaluos/baselines/: __init__.py  greedy_baseline.py  random_baseline.py  rule_based_baseline.py
pimaluos/config/: __init__.py  land_use_config.py  settings.py  zoning_compliance.py
pimaluos/core/: __init__.py  data_loader.py  graph_builder.py
pimaluos/knowledge/: __init__.py  llm.py  parser.py  rag.py
pimaluos/models/: __init__.py  agents.py  gnn.py  nash.py  pareto.py
pimaluos/physics/: __init__.py  digital_twin.py  engine.py
results/ablation/: edge_types_impact.json  edge_types_table.csv  physics_weight_sweep.json  physics_weight_table.csv
results/baselines/: comparison_results.json  comparison_table.csv  pareto_front.csv
scripts/: generate_all_figures.py  generate_difference_maps.py  generate_full_manhattan_plan.py  generate_highlights.py  generate_submission_docx.py  generate_zoning_benchmark.py  run_proper_training.py  visualize_final_plan.py
tests/: conftest.py  test_core.py  test_knowledge.py  test_models.py  test_physics.py  test_system.py  verify_land_use.py
tools/: ceus_review.py
(+34 files in other folders)
