[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pimaluos"
version = "0.1.0"
description = "Physics Informed Multi-Agent Land Use Optimization Software"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PIMALUOS Team", email = "pimaluos@example.com"}
]
keywords = [
    "urban-planning",
    "gnn",
    "graph-neural-network",
    "multi-agent",
    "reinforcement-learning",
    "land-use-optimization",
    "digital-twin",
    "physics-informed",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/pimaluos/pimaluos"
Documentation = "https://pimaluos.readthedocs.io/"
Repository = "https://github.com/pimaluos/pimaluos"
Issues = "https://github.com/pimaluos/pimaluos/issues"

[project.scripts]
pimaluos = "pimaluos.cli:main"
pimaluos-server = "pimaluos.api.server:run_server"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "dashboard*", "docs*"]

[tool.setuptools.package-data]
pimaluos = ["config/cities/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=pimaluos --cov-report=term-missing"
